--- a/advertise.html
+++ b/advertise.html
@@ -46,6 +46,12 @@
   	<a href="https://t.me/yunvgongribenchihan2" target="_blank" rel="noopener noreferrer">
       御女宫日本痴汉频道←点击关注
     </a>
+    <a href="https://t.me/yunvgongshanxian" target="_blank" rel="noopener noreferrer">
+      御女宫闪现走光频道←点击关注
+    </a>
+    <a href="https://t.me/yunvgongmanzhan" target="_blank" rel="noopener noreferrer">
+      御女宫漫展频道←点击关注
+    </a>
     <a href="https://t.me/yunvgongmuru1" target="_blank" rel="noopener noreferrer">
       御女宫母乳频道←点击关注
     </a>
