--- a/advertise.html
+++ b/advertise.html
@@ -43,6 +43,9 @@
     <a href="https://t.me/yunvgongshaonvge" target="_blank" rel="noopener noreferrer">
       御女宫少女阁←点击关注
     </a>
+    <a href="https://t.me/yunvgongshawu" target="_blank" rel="noopener noreferrer">
+      御女宫砂舞频道←点击关注
+    </a>
   	<a href="https://t.me/yunvgongribenchihan2" target="_blank" rel="noopener noreferrer">
       御女宫日本痴汉频道←点击关注
     </a>
