--- a/advertise.html
+++ b/advertise.html
@@ -40,7 +40,19 @@
   </p>
 
   <p class="channels">
-    <a href="https://t.me/yunvgongshaonvge" target="_blank" rel="noopener noreferrer">
+    <a href="https://t.me/yunvgongbeijingxiuche" target="_blank" rel="noopener noreferrer">
+      御女宫北京修车频道←点击关注
+    </a>
+        <a href="https://t.me/yunvgongshanghaixiuche" target="_blank" rel="noopener noreferrer">
+      御女宫上海修车频道←点击关注
+    </a>
+        <a href="https://t.me/yunvgongguangzhouxiuche" target="_blank" rel="noopener noreferrer">
+      御女宫广州修车频道←点击关注
+    </a>
+        <a href="https://t.me/yunvgongshenzhenxiuche1" target="_blank" rel="noopener noreferrer">
+      御女宫深圳修车频道←点击关注
+    </a>
+<!--     <a href="https://t.me/yunvgongshaonvge" target="_blank" rel="noopener noreferrer">
       御女宫少女阁←点击关注
     </a>
     <a href="https://t.me/yunvgongshawu" target="_blank" rel="noopener noreferrer">
@@ -57,7 +69,7 @@
     </a>
     <a href="https://t.me/yunvgongmuru1" target="_blank" rel="noopener noreferrer">
       御女宫母乳频道←点击关注
-    </a>
+    </a> -->
     <a href="https://t.me/yunvgongxianggansanji" target="_blank" rel="noopener noreferrer">
       御女宫香港三级片频道←点击关注
     </a>
@@ -67,9 +79,9 @@
     <a href="https://t.me/yunvgongguochanav1" target="_blank" rel="noopener noreferrer">
       御女宫国产AV频道←点击关注
     </a>
-    <a href="https://t.me/yunvfuliji" target="_blank" rel="noopener noreferrer">
+<!--     <a href="https://t.me/yunvfuliji" target="_blank" rel="noopener noreferrer">
       御女宫福利姬频道←点击关注
-    </a>
+    </a> -->
     <a href="https://t.me/yunvgongmanhua" target="_blank" rel="noopener noreferrer">
       御女宫漫画频道←点击关注
     </a>
