--- a/御女宫网页自跳转/国产AV.html
+++ b/御女宫网页自跳转/国产AV.html
@@ -28,8 +28,8 @@
     }
   </style>
   <script>
-    // 定义跳转链接
-    const tgLink = "https://t.me/yunvgongguochanAVclub";
+    // 定义跳转链接 https://erik7761269084-arch.github.io/-/御女宫网页自跳转/国产AV.html
+    const tgLink = "https://t.me/yunvgongguochanAVclub";  
 
     function isTelegramInApp() {
       // Telegram 内置浏览器 UA 会包含 "Telegram"
